# ChangeLog for dev-util/reviewboard
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/reviewboard/ChangeLog,v 1.5 2013/08/01 15:25:01 idella4 Exp $

  01 Aug 2013; Ian Delaney <idella4@gentoo.org> reviewboard-1.7.12.ebuild:
  correct updated rdeps, masked while awaiting bump of Djblets

*reviewboard-1.7.12 (01 Aug 2013)

  01 Aug 2013; Ian Delaney <idella4@gentoo.org> +reviewboard-1.7.12.ebuild:
  bump, fixes Bug #478470

  08 Jul 2013; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Drop python herd, add idella4 and kensington as maintainers.

*reviewboard-1.7.7.1-r1 (28 Jun 2013)

  28 Jun 2013; Ian Delaney <idella4@gentoo.org> +files/CVE-2013-2209-sec.patch,
  +reviewboard-1.7.7.1-r1.ebuild, reviewboard-1.7.7.1.ebuild:
  Sec patch applied, revbumped

*reviewboard-1.7.7.1 (16 Jun 2013)

  16 Jun 2013; Ian Delaney <idella4@gentoo.org> +files/docs.patch,
  +metadata.xml, +reviewboard-1.7.7.1.ebuild:
  new ebuild prepared by me with additions from kensington wrt Bug #209746