@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/reviewboard
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/reviewboard/ChangeLog,v 1.5 2013/08/01 15:25:01 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/reviewboard/ChangeLog,v 1.6 2013/09/12 11:14:35 mgorny Exp $
+
+  12 Sep 2013; Michał Górny <mgorny@gentoo.org> reviewboard-1.7.12.ebuild:
+  Remove the dep on old django-pipeline that is broken and supposedly not
+  required. Fix python-dateutil dep. Reviewed by kensington.
 
   01 Aug 2013; Ian Delaney <idella4@gentoo.org> reviewboard-1.7.12.ebuild:
   correct updated rdeps, masked while awaiting bump of Djblets
